[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bap-optim"
version = "0.1.0"
description = "Discrete Berth Allocation Problem MILP + weekly planner (Pyomo/Gurobi, PyEPO-compatible) for portsDFL."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyomo>=6.7",
]

[project.optional-dependencies]
# DFL training differentiates through the MILP via PyEPO; the solver backend is
# Gurobi; the planner's Gantt chart needs matplotlib. Install as needed.
# (optimizers/requirements.txt installs the full set: core + dfl + solver.)
dfl = ["pyepo>=0.3"]
solver = ["gurobipy>=11.0"]
plot = ["matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
