[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ports-dfl"
version = "0.1.0"
description = "Decision-Focused Learning prediction models for berth allocation at Puerto de San Antonio"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Juan Pablo Morande" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # long lines fine in tables/comments

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "gpu: marks tests that require CUDA",
]
